[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
chrono = { version = "0.4.23", features = ["serde"] }
figment = { version = "0.10.8", features = ["toml", "parking_lot"] }
itertools = "0.10.5"
once_cell = "1.16.0"
parking_lot = "0.12.1"
rayon = "1.6.0"
regex = "1.7.0"
serde = { version = "1.0.148", features = ["derive"] }
tokio = { version = "1.22.0", features = ["parking_lot", "fs", "full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
